Prod V2/main/default/objects/OrderItem/fields/Backorder_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Backorder_Quantity__c</fullName>
    <formula>Quantity - Quantity_Delivered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backorder Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>