Prod V2/main/default/objects/OrderItem/fields/Loyalty_Points__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Points__c</fullName>
    <label>Loyalty Points</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>