Prod V2/main/default/objects/OrderItem/fields/Odoo_Reward_Id__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Reward_Id__c</fullName>
    <label>Odoo Reward Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>