Prod V2/main/default/objects/OrderItem/fields/Product_Id_Odoo__c.field-meta.xml
<CustomField>
    <fullName>Product_Id_Odoo__c</fullName>
    <formula>Product2.Odoo_ID__c</formula>
    <label>Product Id Odoo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>