Prod V2/main/default/objects/OrderItem/fields/Quantity_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Delivered__c</fullName>
    <description>Comes from Odoo</description>
    <label>Quantity Delivered</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>