Prod V2/main/default/objects/OrderItem/fields/Quantity_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Invoiced__c</fullName>
    <description>comes from Odoo</description>
    <label>Quantity Invoiced</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>